added review changes, and added token for request signUp

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -3,7 +3,7 @@
     <a class="header__logo" routerLink="home">
       <img src="../../../../assets/img/logo.svg" alt="logo" >
     </a>
-    <div class="header__buttons" *ngIf="!auth.isAuthenticated(); else elseBlock">
+    <div class="header__buttons" *ngIf="!user?.name; else elseBlock">
       <button class="button width-179" routerLink="login">
         <svg width="179" height="45" viewBox="0 0 179 45" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M1 1V44H161.168L177.617 27.5503V1H1Z" stroke="#FF1822"/>
