--- a/src/app/shared/components/loader/loader.component.html
+++ b/src/app/shared/components/loader/loader.component.html
@@ -1,3 +1,3 @@
-<div class="loader">
+<div class="loader" *ngIf="this.loaderService.getLoading()">
   <mat-spinner class="my-carousel-button" strokeWidth="4" diameter="50"></mat-spinner>
 </div>
