--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-background></app-background>
 
-<app-loader *ngIf="this.loaderService.getLoading()"></app-loader>
+<app-loader [isGlobal]="true"></app-loader>
 
 <div class="main__wrap">
   <app-header></app-header>
