--- a/src/app/public/pages/registration/registration.component.html
+++ b/src/app/public/pages/registration/registration.component.html
@@ -82,7 +82,7 @@
       <button
         class="btn-red"
         type="submit"
-        [disabled]="form.invalid || isLoading"
+        [disabled]="form.invalid || showLoader"
       >
         <svg viewBox="0 0 225 56" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none">
           <polygon fill="none" points="215.5 43.5 203.83 55.5 0.5 55.5 0.5 0.5 224.5 0.5 224.5 34.67 215.5 43.5"></polygon>
@@ -100,4 +100,4 @@
   </div>
 </div>
 
-<app-loader *ngIf="isLoading" ></app-loader>
+<app-loader [showLoader]="showLoader"></app-loader>
