--- a/src/app/shared/components/edit-form/edit-form.component.html
+++ b/src/app/shared/components/edit-form/edit-form.component.html
@@ -27,13 +27,13 @@
       <button
         class="btn-red"
         type="submit"
-        [disabled]="form.invalid || isLoading"
+        [disabled]="form.invalid || showLoader"
       >
         <svg viewBox="0 0 225 56" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none">
           <polygon fill="none" points="215.5 43.5 203.83 55.5 0.5 55.5 0.5 0.5 224.5 0.5 224.5 34.67 215.5 43.5"></polygon>
           <polygon fill="transparent" stroke="#FF1822" points="215.5 43.5 203.83 55.5 0.5 55.5 0.5 0.5 224.5 0.5 224.5 34.67 215.5 43.5"></polygon>
         </svg>
-        <span>{{ isLoading ? 'Saving...' : 'Save changes' }}</span>
+        <span>{{ showLoader ? 'Saving...' : 'Save changes' }}</span>
       </button>
     </form>
 
@@ -42,4 +42,4 @@
   </div>
 </div>
 
-<app-loader *ngIf="isLoading" ></app-loader>
+<app-loader [showLoader]="showLoader"></app-loader>
