--- a/src/app/shared/components/loader/loader.component.scss
+++ b/src/app/shared/components/loader/loader.component.scss
@@ -9,11 +9,12 @@
   justify-content: center;
   margin: auto;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: rgba(0, 0, 0, .5);
   z-index: 100;
 
   &--global{
+    background-color: rgba(0, 0, 0, 1);
     position: fixed;
   }
 }
