implement global loader (#14)
* implement global loader

* edit implementation global loader

* edit implementation global loader

* added review changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <app-background></app-background>
+
+<app-loader [isGlobal]="true"></app-loader>
+
 <div class="main__wrap">
   <app-header></app-header>
   <main class="main">
