--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -22,10 +22,11 @@
     width: em(300);
   }
 
-  .button {
-    &:nth-of-type(1) {
-      margin-right: em(24);
-    }
+  &__buttons {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: em(320);
   }
 
   &__user {
@@ -60,13 +61,14 @@
         user-select: none;
       }
 
-      li:hover  {
+      li:hover {
         ul {
           opacity: 1;
           visibility: visible;
           user-select: auto;
         }
       }
+
       &__name {
         display: flex;
         align-items: center;
@@ -78,16 +80,19 @@
           color: var(--title-color);
           font-weight: 600;
           font-size: em(13);
-          margin-right: em(12,13);
+          margin-right: em(12, 13);
         }
+
         svg {
           width: em(8);
+
           path {
             fill: var(--title-color);
           }
         }
 
       }
+
       &__possibilities {
         width: em(140);
         position: absolute;
@@ -108,6 +113,7 @@
             color: var(--text-color);
             text-transform: initial;
           }
+
           &:last-child {
             border-bottom: none;
           }
@@ -125,7 +131,5 @@
         text-decoration: underline;
       }
     }
-
-
   }
 }
