--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -1,31 +1,21 @@
 <ng-container *ngIf="isLink; else buttonTemplate">
-  <a class="button {{classes}}"  [routerLink]="linkUrl">
+  <a class="button {{ classes }}" [routerLink]="linkUrl">
     <svg viewBox="0 0 225 56" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none">
       <polygon fill="none" points="215.5 43.5 203.83 55.5 0.5 55.5 0.5 0.5 224.5 0.5 224.5 34.67 215.5 43.5"></polygon>
-      <polygon fill="transparent" stroke="#FF1822" points="215.5 43.5 203.83 55.5 0.5 55.5 0.5 0.5 224.5 0.5 224.5 34.67 215.5 43.5"></polygon>
+      <polygon fill="transparent" stroke="#FF1822"
+               points="215.5 43.5 203.83 55.5 0.5 55.5 0.5 0.5 224.5 0.5 224.5 34.67 215.5 43.5"></polygon>
     </svg>
     <span>{{ label }}</span>
   </a>
 </ng-container>
 
 <ng-template #buttonTemplate>
-  <button class="button {{classes}}" [type]="type" [disabled]="disabled">
+  <button class="button {{ classes }}" [type]="type" [disabled]="disabled">
     <svg viewBox="0 0 225 56" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none">
       <polygon fill="none" points="215.5 43.5 203.83 55.5 0.5 55.5 0.5 0.5 224.5 0.5 224.5 34.67 215.5 43.5"></polygon>
-      <polygon fill="transparent" stroke="#FF1822" points="215.5 43.5 203.83 55.5 0.5 55.5 0.5 0.5 224.5 0.5 224.5 34.67 215.5 43.5"></polygon>
+      <polygon fill="transparent" stroke="#FF1822"
+               points="215.5 43.5 203.83 55.5 0.5 55.5 0.5 0.5 224.5 0.5 224.5 34.67 215.5 43.5"></polygon>
     </svg>
     <span>{{ label }}</span>
   </button>
 </ng-template>
-
-
-
-
-<!--<button class="button width-179" routerLink="login">-->
-<!--  <svg width="179" height="45" viewBox="0 0 179 45" fill="none" xmlns="http://www.w3.org/2000/svg">-->
-<!--    <path d="M1 1V44H161.168L177.617 27.5503V1H1Z" stroke="#FF1822"/>-->
-<!--  </svg>-->
-<!--  <span>LOG IN</span>-->
-<!--</button>-->
-
-<!--<app-button #link></app-button>-->
