added review changes for button component

--- a/src/app/public/pages/login/login.component.html
+++ b/src/app/public/pages/login/login.component.html
@@ -49,10 +49,11 @@
       </label>
 
       <app-button
-        label="Log In"
         type="submit"
         [disabled]="form.invalid || showLoader"
-      ></app-button>
+      >
+        Log In
+      </app-button>
 
     </form>
 
