--- a/src/app/public/pages/registration/registration.component.html
+++ b/src/app/public/pages/registration/registration.component.html
@@ -80,10 +80,11 @@
       </div>
 
       <app-button
-        label="Registration"
         type="submit"
         [disabled]="form.invalid || showLoader"
-      ></app-button>
+      >
+        Registration
+      </app-button>
 
     </form>
 
