--- a/src/app/public/pages/registration/registration.component.html
+++ b/src/app/public/pages/registration/registration.component.html
@@ -79,17 +79,12 @@
         </div>
       </div>
 
-      <button
-        class="btn-red"
+      <app-button
         type="submit"
         [disabled]="form.invalid || showLoader"
       >
-        <svg viewBox="0 0 225 56" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none">
-          <polygon fill="none" points="215.5 43.5 203.83 55.5 0.5 55.5 0.5 0.5 224.5 0.5 224.5 34.67 215.5 43.5"></polygon>
-          <polygon fill="transparent" stroke="#FF1822" points="215.5 43.5 203.83 55.5 0.5 55.5 0.5 0.5 224.5 0.5 224.5 34.67 215.5 43.5"></polygon>
-        </svg>
-        <span>Registration</span>
-      </button>
+        Registration
+      </app-button>
 
     </form>
 
