--- a/src/app/shared/components/edit-form/edit-form.component.html
+++ b/src/app/shared/components/edit-form/edit-form.component.html
@@ -24,17 +24,14 @@
         </div>
       </div>
 
-      <button
-        class="btn-red"
+      <app-button
         type="submit"
+        classes="w-320"
         [disabled]="form.invalid || showLoader"
       >
-        <svg viewBox="0 0 225 56" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none">
-          <polygon fill="none" points="215.5 43.5 203.83 55.5 0.5 55.5 0.5 0.5 224.5 0.5 224.5 34.67 215.5 43.5"></polygon>
-          <polygon fill="transparent" stroke="#FF1822" points="215.5 43.5 203.83 55.5 0.5 55.5 0.5 0.5 224.5 0.5 224.5 34.67 215.5 43.5"></polygon>
-        </svg>
-        <span>{{ showLoader ? 'Saving...' : 'Save changes' }}</span>
-      </button>
+        {{ showLoader ? 'Saving...' : 'Save changes' }}
+      </app-button>
+
     </form>
 
     <button class="close" (click)="close()">X</button>
