added time component, edited some styles

--- a/src/app/private/pages/home/home.component.html
+++ b/src/app/private/pages/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!!!!!</p>
+<div class="container">
+  <div class="title">
+    <span>Attendance Tracker</span>
+    <span class="title-red">.</span>
+  </div>
+  <app-time></app-time>
+</div>
