--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -126,6 +126,7 @@
       font-weight: 600;
       margin-left: em(36, 13);
       font-size: em(13);
+      text-transform: uppercase;
 
       &:hover {
         text-decoration: underline;
