--- a/src/styles/reset-styles/reset.scss
+++ b/src/styles/reset-styles/reset.scss
@@ -127,3 +127,7 @@ button {
   background: none;
   cursor: pointer;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
