--- a/src/app/private/components/time/time.component.scss
+++ b/src/app/private/components/time/time.component.scss
@@ -1,4 +1,4 @@
-@import 'src/styles/shared/functions';
+@import '../../../../styles/shared/functions';
 
 .time {
   display: flex;
@@ -11,6 +11,7 @@
     justify-content: flex-end;
     text-align: center;
   }
+
   &__block {
     height: em(72);
     display: flex;
