add review changes

--- a/src/app/private/components/time/time.component.html
+++ b/src/app/private/components/time/time.component.html
@@ -40,7 +40,7 @@
     </div>
     <app-button
       classes="grey no-element"
-      (click)="handleClick()"
+      (click)="toggleLunchInput()"
     >
       {{ isShowInput ? 'add' : 'work at lunch' }}
     </app-button>
