--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -2,7 +2,7 @@
 
 
 .header {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   right: 0;
@@ -126,6 +126,7 @@
       font-weight: 600;
       margin-left: em(36, 13);
       font-size: em(13);
+      text-transform: uppercase;
 
       &:hover {
         text-decoration: underline;
