--- a/src/styles/layout/_global.scss
+++ b/src/styles/layout/_global.scss
@@ -6,6 +6,7 @@
   --background-color: #000000;
   --text-color: #A1A1A1;
   --title-color: #FFFFFF;
+  --title-secondary-color: #FFFFFF;
   --btn-red-text-color: #FFFFFF;
   --red-color: #FF1822;
   --green-color: #00CF2C;
