--- a/src/app/private/components/reason-modal/reason-modal.component.html
+++ b/src/app/private/components/reason-modal/reason-modal.component.html
@@ -3,17 +3,13 @@
 
     <div class="title">
       <span>
-        {{ data.modal === 'isLeaveModal' ?
-        'you\'re too early' :
-        'Lateness' }}
+        {{ data.title }}
       </span>
       <span class="title-red">!</span>
     </div>
 
     <div class="title-secondary">
-      {{ data.modal === 'isLeaveModal' ?
-      'WHERE ARE YOU GOING SO EARLY? There\'s still time to work and work...' :
-      'You have no excuse. But you can try, write:' }}
+      {{ data.subtitle }}
     </div>
 
     <form class="form" [formGroup]="form" (ngSubmit)="submit()">
