--- a/src/app/private/components/reason-modal/reason-modal.component.html
+++ b/src/app/private/components/reason-modal/reason-modal.component.html
@@ -3,13 +3,13 @@
 
     <div class="title">
       <span>
-        {{ data.title }}
+        {{ data.text.title }}
       </span>
       <span class="title-red">!</span>
     </div>
 
     <div class="title-secondary">
-      {{ data.subtitle }}
+      {{ data.text.subtitle }}
     </div>
 
     <form class="form" [formGroup]="form" (ngSubmit)="submit()">
