--- a/src/app/private/components/table/table.component.html
+++ b/src/app/private/components/table/table.component.html
@@ -1,53 +1,69 @@
-<div *ngFor="let monthGroup of groupedAttendance | keyvalue: reverseOrderDate">
-  <div class="table">
-    <div class="table__row table__row-header">
-      <div class="table__cell table__cell-date">
-        <span>Date</span>
-      </div>
-      <div class="table__cell">
-        <span>Came</span>
-      </div>
-      <div class="table__cell">
-        <span>Leave</span>
-      </div>
-      <div class="table__cell">
-        <span>Summary</span>
-      </div>
-      <div class="table__cell table__cell-result">
-        <span>Result</span>
-      </div>
-    </div>
-    <div class="table__row" *ngFor="let date of monthGroup.value | keyvalue: reverseOrder">
-      <div class="table__cell table__cell-date">
-        <span>{{ date.key | date: 'yyyy - MM - dd'}}</span>
-      </div>
-      <div class="table__cell">
-        <span>{{ date.value.cameTime ? (date.value.cameTime | date: 'HH:mm') : '-- : --' }}</span>
-      </div>
-      <div class="table__cell">
-        <span>{{date.value.leaveTime ? (date.value.leaveTime | date: 'HH:mm') : '-- : --' }}</span>
-      </div>
-      <div class="table__cell">
-        <span>08:05</span>
-      </div>
-      <div class="table__cell table__cell-result">
-        <span>НедоработКА:</span>
-        <span class="value">00:55</span>
-      </div>
-    </div>
-    <div class="table__row table__row-footer">
-      <div class="table__cell table__cell-days">
-        <span>Work days: </span>
-        <span class="value">{{ Object.keys(monthGroup.value).length }}</span>
-      </div>
-      <div class="table__cell table__cell-time">
-        <span>Total worked: </span>
-        <span class="value">51:17</span>
-      </div>
-      <div class="table__cell table__cell-sum table__cell_sum-red">
-        <span>Total unfinished: </span>
-        <span class="value">12:43</span>
-      </div>
-    </div>
-  </div>
+<div *ngFor="let monthGroup of groupedAttendance">
+  <mat-table [dataSource]="monthGroup.items" class="table">
+    <mat-header-row *matHeaderRowDef="columnsToDisplayHeader"></mat-header-row>
+    <mat-row *matRowDef="let myRowData; columns: columnsToDisplayHeader"></mat-row>
+    <mat-footer-row *matFooterRowDef="columnsToDisplayFooter"></mat-footer-row>
+
+    <ng-container matColumnDef="date">
+      <mat-header-cell *matHeaderCellDef> Date</mat-header-cell>
+      <mat-cell *matCellDef="let element ">
+        {{ element.day | date: 'yyyy - MM - dd' }}
+      </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="came">
+      <mat-header-cell *matHeaderCellDef> Came</mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        {{ element.value['cameTime'] ?
+        (element.value['cameTime'] | date: 'HH:mm') :
+        '-- : --' }}
+      </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="leave">
+      <mat-header-cell *matHeaderCellDef> Leave</mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        {{ element.value.leaveTime ?
+        (element.value.leaveTime | date: 'HH:mm') :
+        '-- : --' }}
+      </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="summary">
+      <mat-header-cell *matHeaderCellDef> Summary</mat-header-cell>
+      <mat-cell *matCellDef="let element" [ngClass]="element.value | summaryTime | statusTime">
+        {{ (element.value | summaryTime) ?
+        (element.value | summaryTime | date: 'HH:mm':'UTC') :
+        '-- : --' }}
+      </mat-cell>
+    </ng-container>
+
+
+    <ng-container matColumnDef="result">
+      <mat-header-cell *matHeaderCellDef> Result</mat-header-cell>
+      <mat-cell *matCellDef="let element" [ngClass]="element.value | summaryTime | statusTime">
+        {{ element.value | summaryTime | statusTime:'text' }}
+        {{ (element.value | summaryTime) ?
+        (element.value | summaryTime | resultTime | date: 'HH:mm':'UTC') :
+        '-- : --' }}
+      </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="work">
+      <mat-footer-cell *matFooterCellDef> Work days:
+        <span class="value">{{ monthGroup.items.length }}</span>
+      </mat-footer-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="total">
+      <mat-footer-cell *matFooterCellDef> Total worked:
+        <span class="value">{{ monthGroup.items.length }}</span>
+      </mat-footer-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="resultFooter">
+      <mat-footer-cell *matFooterCellDef> Total unfinished:
+        <span class="value">{{ monthGroup.items.length }}</span>
+      </mat-footer-cell>
+    </ng-container>
+  </mat-table>
 </div>
