--- a/src/app/private/components/table/table.component.scss
+++ b/src/app/private/components/table/table.component.scss
@@ -3,35 +3,65 @@
 .table {
   width: 100%;
   margin-top: em(100);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: em(1);
   text-transform: uppercase;
+  background: none;
 
-  &__row {
+  mat-header-row, mat-footer-row {
     width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: var(--window-color);
-    height: em(53);
+    background-color: var(--input-color);
+    height: em(53, 14);
+    min-height: em(53, 14);
+    gap: em(1);
+    margin-bottom: em(1, 14);
+    font-family: 'Montserrat', sans-serif;
+    font-size: em(14);
+    font-weight: 700;
+    color: var(--text-color);
+  }
 
-    span {
-      font-family: 'Montserrat', sans-serif;
-      font-size: em(14);
-      font-weight: 700;
-      color: var(--white-color);
-
-    }
-
-    &-header {
-      background-color: var(--input-color);
-      span {
-        color: var(--text-color);
-      }
+  mat-header-cell {
+    &:last-child {
+      justify-content: flex-end;
     }
   }
+
+  mat-row {
+    font-family: 'Montserrat', sans-serif;
+    font-size: em(14);
+    font-weight: 700;
+    background-color: var(--window-color);
+    color: var(--white-color);
+    min-height: em(53, 14);
+    margin-bottom: em(1, 14);
+  }
+
+  mat-cell {
+    &:last-child {
+      justify-content: flex-end;
+    }
+
+    &.red {
+      color: var(--red-color);
+    }
+
+    &.green {
+      color: var(--green-color);
+    }
+
+    &.white {
+      color: var(--white-color);
+    }
+  }
+
+  mat-footer-cell {
+    .value {
+      margin-left: em(5);
+      color: var(--white-color);
+    }
+  }
+
+
+
   &__cell {
     width: 15%;
     height: 100%;
@@ -60,6 +90,7 @@
 
       span {
         color: var(--text-color);
+
         &.value {
           color: var(--white-color);
         }
@@ -68,8 +99,10 @@
 
     &-time {
       width: 35%;
+
       span {
         color: var(--text-color);
+
         &.value {
           color: var(--white-color);
         }
@@ -90,5 +123,20 @@
     &_sum-green {
       background-color: var(--green-color);
     }
+
+    span {
+      &.red {
+        color: var(--red-color);
+      }
+
+      &.green {
+        color: var(--green-color);
+      }
+
+      &.white {
+        color: var(--white-color);
+      }
+    }
+
   }
 }
