--- a/src/app/private/components/time/time.component.html
+++ b/src/app/private/components/time/time.component.html
@@ -54,3 +54,9 @@
     </app-button>
   </div>
 </div>
+
+<label class="checkbox">
+  <input type="checkbox" [(ngModel)]="currentTime.workFromHome" (change)="addTime()">
+  <div class="checkmark"></div>
+  I work from home
+</label>
