added review changes

--- a/src/app/private/components/table/table.component.scss
+++ b/src/app/private/components/table/table.component.scss
@@ -1,8 +1,12 @@
 @import '../../../../styles/shared/functions';
 
+:host {
+  position: relative;
+}
+
 .table {
   width: 100%;
-  margin-top: em(100);
+  margin-top: em(80);
   text-transform: uppercase;
   background: none;
 
