--- a/src/app/private/pages/home/home.component.html
+++ b/src/app/private/pages/home/home.component.html
@@ -3,5 +3,6 @@
     <span>Attendance Tracker</span>
     <span class="title-red">.</span>
   </div>
-  <app-table></app-table>
+  <app-time (attendanceChanged)="getAttendance()"></app-time>
+  <app-table [groupedAttendance]="groupedAttendance" [showLoader]="showLoader"></app-table>
 </div>
