--- a/src/app/private/components/table/table.component.html
+++ b/src/app/private/components/table/table.component.html
@@ -1,5 +1,3 @@
-<app-time (attendanceChanged)="updateAttendance()"></app-time>
-
 <ng-container *ngFor="let monthGroup of groupedAttendance">
   <mat-table [dataSource]="monthGroup.items" class="table">
     <mat-header-row *matHeaderRowDef="columnsToDisplayHeader"></mat-header-row>
@@ -8,7 +6,7 @@
 
     <ng-container matColumnDef="date">
       <mat-header-cell *matHeaderCellDef> Date</mat-header-cell>
-      <mat-cell *matCellDef="let element ">
+      <mat-cell *matCellDef="let element">
         {{ element.day | date: 'yyyy - MM - dd' }}
       </mat-cell>
     </ng-container>
@@ -33,7 +31,7 @@
       <mat-header-cell *matHeaderCellDef> Summary</mat-header-cell>
       <mat-cell *matCellDef="let element" [ngClass]="element.value | statusTime">
         <div class="time"> {{ (element.value.leaveTime) ?
-        (element.value | summaryTime | date: 'HH:mm':'UTC') :
+        (element.value | summaryTime) :
         '-- : --' }}</div>
         <div class="lunch" *ngIf="element.value.lunchTime">
           <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -66,7 +64,7 @@
       <mat-cell *matCellDef="let element" [ngClass]="element.value | statusTime">
         {{ element.value | statusTime:'text' }}
         {{ (element.value.leaveTime) ?
-        (element.value | resultTime | date: 'HH:mm':'UTC') :
+        (element.value | resultTime) :
         '-- : --' }}
       </mat-cell>
     </ng-container>
@@ -92,6 +90,7 @@
       </mat-footer-cell>
     </ng-container>
   </mat-table>
-
-
 </ng-container>
+
+<app-loader [showLoader]="showLoader"></app-loader>
+
