table display logic is separated, use materials for checkbox, icons and tooltips. Generate icons set file

--- a/src/app/private/components/time/time.component.html
+++ b/src/app/private/components/time/time.component.html
@@ -54,9 +54,8 @@
     </app-button>
   </div>
 </div>
-
-<label class="checkbox">
-  <input type="checkbox" [disabled]="!!(currentTime.leaveTime)"  [(ngModel)]="currentTime.workFromHome">
-  <div class="checkmark"></div>
+<mat-checkbox class="checkbox"
+              [disabled]="!!(currentTime.leaveTime)"
+              [(ngModel)]="currentTime.workFromHome">
   I work from home
-</label>
+</mat-checkbox>
