--- a/src/app/private/components/table/table.component.html
+++ b/src/app/private/components/table/table.component.html
@@ -1,96 +1,80 @@
-<ng-container *ngFor="let monthGroup of groupedAttendance">
-  <mat-table [dataSource]="monthGroup.items" class="table">
-    <mat-header-row *matHeaderRowDef="columnsToDisplayHeader"></mat-header-row>
-    <mat-row *matRowDef="let myRowData; columns: columnsToDisplayHeader"></mat-row>
-    <mat-footer-row *matFooterRowDef="columnsToDisplayFooter"></mat-footer-row>
+<mat-table [dataSource]="monthRecord" class="table">
+  <mat-header-row *matHeaderRowDef="columnsToDisplayHeader"></mat-header-row>
+  <mat-row *matRowDef="let myRowData; columns: columnsToDisplayHeader"></mat-row>
+  <mat-footer-row *matFooterRowDef="columnsToDisplayFooter"></mat-footer-row>
 
-    <ng-container matColumnDef="date">
-      <mat-header-cell *matHeaderCellDef> Date</mat-header-cell>
-      <mat-cell *matCellDef="let element">
-        {{ element.day | date: 'yyyy - MM - dd' }}
-      </mat-cell>
-    </ng-container>
+  <ng-container matColumnDef="date">
+    <mat-header-cell *matHeaderCellDef> Date</mat-header-cell>
+    <mat-cell *matCellDef="let element">
+      {{ element.day | date: 'yyyy - MM - dd' }}
+    </mat-cell>
+  </ng-container>
 
-    <ng-container matColumnDef="came">
-      <mat-header-cell *matHeaderCellDef> Came</mat-header-cell>
-      <mat-cell *matCellDef="let element">
-        {{ element.value.cameTime | date: 'HH:mm' }}
-      </mat-cell>
-    </ng-container>
+  <ng-container matColumnDef="came">
+    <mat-header-cell *matHeaderCellDef> Came</mat-header-cell>
+    <mat-cell *matCellDef="let element">
+      {{ element.value.cameTime | date: 'HH:mm' }}
+    </mat-cell>
+  </ng-container>
 
-    <ng-container matColumnDef="leave">
-      <mat-header-cell *matHeaderCellDef> Leave</mat-header-cell>
-      <mat-cell *matCellDef="let element">
-        {{ element.value.leaveTime ?
-        (element.value.leaveTime | date: 'HH:mm') :
-        '-- : --' }}
-      </mat-cell>
-    </ng-container>
+  <ng-container matColumnDef="leave">
+    <mat-header-cell *matHeaderCellDef> Leave</mat-header-cell>
+    <mat-cell *matCellDef="let element">
+      {{ element.value.leaveTime ?
+      (element.value.leaveTime | date: 'HH:mm') :
+      '-- : --' }}
+    </mat-cell>
+  </ng-container>
 
-    <ng-container matColumnDef="summary">
-      <mat-header-cell *matHeaderCellDef> Summary</mat-header-cell>
-      <mat-cell *matCellDef="let element" [ngClass]="element.value | statusTime">
-        <div class="time"> {{ (element.value.leaveTime) ?
+  <ng-container matColumnDef="summary">
+    <mat-header-cell *matHeaderCellDef> Summary</mat-header-cell>
+    <mat-cell *matCellDef="let element" [ngClass]="element.value | statusTime">
+      <div class="time"> {{ (element.value.leaveTime) ?
         (element.value | summaryTime) :
         '-- : --' }}</div>
-        <div class="lunch" *ngIf="element.value.lunchTime">
-          <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <g clip-path="url(#clip0_2555_29)">
-              <path d="M9.79051 0.915633L20.0849 11.21C20.3412 11.4663 20.3412 11.8824 20.0849 12.1387L18.2919 13.9317C18.0357 14.188 17.6195 14.188 17.3633 13.9317L7.06885 3.63729C6.81257 3.38101 6.81257 2.96489 7.06885 2.70861L8.86183 0.915633C9.11811 0.659353 9.53423 0.659353 9.79051 0.915633Z" fill="#ffffff"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M6.8632 9.90669C7.30608 9.46381 8.02522 9.46369 8.4681 9.90657C8.91098 10.3494 8.91098 11.0687 8.4681 11.5116C8.02522 11.9545 7.30596 11.9545 6.86308 11.5116C6.4202 11.0687 6.42032 10.3496 6.8632 9.90669ZM5.93156 14.1377C6.37444 13.6948 7.0937 13.6948 7.53658 14.1377C7.97946 14.5805 7.97934 15.2997 7.53646 15.7426C7.09358 16.1854 6.37444 16.1856 5.93156 15.7427C5.48868 15.2998 5.48868 14.5805 5.93156 14.1377ZM7.12207 4.66675L4.9004 10.8528L2.50421 17.5251C2.20365 18.3619 2.63901 18.7972 3.47581 18.4967L10.1481 16.1005L16.3341 13.8788L7.12207 4.66675ZM10.6285 11.7192C11.0714 11.2763 11.7904 11.2763 12.2333 11.7192C12.6761 12.162 12.6763 12.8812 12.2334 13.3241C11.7905 13.7669 11.0712 13.7669 10.6284 13.3241C10.1855 12.8812 10.1856 12.162 10.6285 11.7192Z" fill="#ffffff"/>
-            </g>
-            <defs>
-              <clipPath id="clip0_2555_29">
-                <rect width="21" height="21" fill="white"/>
-              </clipPath>
-            </defs>
-          </svg>
-          <div class="lunch__info">
-            <span>Work at lunch: {{ element.value.lunchTime }} min</span>
-          </div>
-        </div>
-        <div class="work-home" *ngIf="element.value.workFromHome">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17.5 14.88">
-            <path fill="#ffffff" d="M7,14.88V9.63h3.5v5.25h4.38v-7H17.5L8.75,0,0,7.88H2.63v7Z"></path>
-          </svg>
+      <div class="lunch" *ngIf="element.value.lunchTime"
+           matTooltip="Work at lunch: {{ element.value.lunchTime }} min"
+           matTooltipClass="custom-tooltip"
+           matTooltipPosition="above">
+        <mat-icon svgIcon="lunch-icon"></mat-icon>
+      </div>
+      <div class="work-home" *ngIf="element.value.workFromHome">
+        <mat-icon fontIcon="home" *ngIf="element.value.workFromHome"></mat-icon>
+      </div>
 
-        </div>
+    </mat-cell>
+  </ng-container>
 
-      </mat-cell>
-    </ng-container>
+  <ng-container matColumnDef="result">
+    <mat-header-cell *matHeaderCellDef> Result</mat-header-cell>
+    <mat-cell *matCellDef="let element" [ngClass]="element.value | statusTime">
+      {{ element.value | statusTime:'text' }}
+      {{ (element.value.leaveTime) ?
+      (element.value | resultTime) :
+      '-- : --' }}
+    </mat-cell>
+  </ng-container>
 
-    <ng-container matColumnDef="result">
-      <mat-header-cell *matHeaderCellDef> Result</mat-header-cell>
-      <mat-cell *matCellDef="let element" [ngClass]="element.value | statusTime">
-        {{ element.value | statusTime:'text' }}
-        {{ (element.value.leaveTime) ?
-        (element.value | resultTime) :
-        '-- : --' }}
-      </mat-cell>
-    </ng-container>
+  <ng-container matColumnDef="work">
+    <mat-footer-cell *matFooterCellDef> Work days:
+      <span class="value">{{ monthRecord.length }}</span>
+    </mat-footer-cell>
+  </ng-container>
 
-    <ng-container matColumnDef="work">
-      <mat-footer-cell *matFooterCellDef> Work days:
-        <span class="value">{{ monthGroup.items.length }}</span>
-      </mat-footer-cell>
-    </ng-container>
+  <ng-container matColumnDef="total">
+    <mat-footer-cell *matFooterCellDef> Total worked:
+      <span class="value">{{ monthRecord | totalTime }}</span>
+    </mat-footer-cell>
+  </ng-container>
 
-    <ng-container matColumnDef="total">
-      <mat-footer-cell *matFooterCellDef> Total worked:
-        <span class="value">{{ monthGroup.items | totalTime }}</span>
-      </mat-footer-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="resultFooter">
-      <mat-footer-cell class="result" *matFooterCellDef="let element" [ngClass]="monthGroup.items | statusResult ">
-        Total {{ monthGroup.items | statusResult: 'text' }}:
-        <span class="value">
-          {{ monthGroup.items | totalTime: 'result'}}
+  <ng-container matColumnDef="resultFooter">
+    <mat-footer-cell class="result" *matFooterCellDef="let element" [ngClass]="monthRecord | statusResult ">
+      Total {{ monthRecord | statusResult: 'text' }}:
+      <span class="value">
+          {{ monthRecord | totalTime: 'result'}}
         </span>
-      </mat-footer-cell>
-    </ng-container>
-  </mat-table>
-</ng-container>
+    </mat-footer-cell>
+  </ng-container>
+</mat-table>
 
-<app-loader [showLoader]="showLoader"></app-loader>
 
