--- a/src/app/private/components/table/table.component.scss
+++ b/src/app/private/components/table/table.component.scss
@@ -44,10 +44,6 @@
       justify-content: flex-end;
     }
 
-    &:nth-child(4) {
-      overflow: visible;
-    }
-
     &.red {
       color: var(--red-color);
 
@@ -69,8 +65,6 @@
     }
 
     &.white {
-      color: var(--white-color);
-
       .lunch svg {
         path {
           fill: var(--white-color);
@@ -78,8 +72,16 @@
       }
     }
 
+    .work-home mat-icon {
+      color: var(--white-color) !important;
+    }
+
     .time {
       width: em(60);
+    }
+
+    .lunch {
+      cursor: pointer;
     }
 
     .lunch, .work-home {
@@ -90,6 +92,12 @@
       align-items: center;
       justify-content: center;
       position: relative;
+
+      mat-icon {
+        font-size: em(28) !important;
+        width: em(28, 28) !important;
+        height: em(28, 28) !important;
+      }
 
       &:after {
         content: "";
@@ -106,41 +114,6 @@
       svg {
         width: em(21);
         cursor: pointer;
-      }
-
-      &__info {
-        display: block;
-        position: absolute;
-        background-color: var(--white-color);
-        color: #000000;
-        padding: em(10) em(20);
-        min-width: em(100);
-        min-height: em(30);
-        text-align: center;
-        white-space: nowrap;
-        top: em(-30);
-        left: 50%;
-        transform: translateX(-50%);
-        pointer-events: none;
-        user-select: none;
-        opacity: 0;
-        visibility: hidden;
-        transition: all .3s ease-in-out;
-
-        &:before {
-          content: "";
-          position: absolute;
-          left: 50%;
-          transform: translateX(-50%);
-          top: 90%;
-          border: em(12) solid transparent;
-          border-top: em(12) solid var(--white-color);
-        }
-      }
-
-      svg:hover ~ .lunch__info {
-        opacity: 1;
-        visibility: visible;
       }
     }
   }
@@ -163,6 +136,4 @@
       background-color: var(--green-color);
     }
   }
-
-
 }
