added checkbox component to login page, edited styles

--- a/src/app/public/pages/login/login.component.html
+++ b/src/app/public/pages/login/login.component.html
@@ -42,11 +42,9 @@
         </div>
       </div>
 
-      <label class="form__control mb-32 form__control-checkbox">
-        <input type="checkbox" formControlName="rememberMe">
-        <span class="checkmark"></span>
+      <mat-checkbox class="checkbox mb-32" formControlName="rememberMe">
         Remember me
-      </label>
+      </mat-checkbox>
 
       <app-button
         type="submit"
