--- a/src/styles/layout/_checkbox.scss
+++ b/src/styles/layout/_checkbox.scss
@@ -1,18 +1,16 @@
 @import '../shared/functions';
 
 .mat-mdc-checkbox {
-  margin-top: em(30);
-
   .mat-mdc-checkbox-ripple, .mdc-checkbox__ripple {
     display: none;
   }
 
   .mdc-form-field {
     color: var(--text-color);
-    font-size: em(22);
+    font-size: em(20);
     line-height: 1;
 
-    &>label {
+    & > label {
       padding-left: em(15);
     }
 
@@ -43,10 +41,21 @@
         height: em(24);
       }
 
-      .mdc-checkbox__native-control:enabled:checked~.mdc-checkbox__background, .mdc-checkbox .mdc-checkbox__native-control:enabled:indeterminate~.mdc-checkbox__background, .mdc-checkbox .mdc-checkbox__native-control[data-indeterminate=true]:enabled~.mdc-checkbox__background {
-        border-color:var(--red-color) !important;
+      .mdc-checkbox__native-control:enabled:checked ~ .mdc-checkbox__background, .mdc-checkbox .mdc-checkbox__native-control:enabled:indeterminate ~ .mdc-checkbox__background, .mdc-checkbox .mdc-checkbox__native-control[data-indeterminate=true]:enabled ~ .mdc-checkbox__background {
+        border-color: var(--red-color) !important;
         background-color: var(--red-color) !important;
       }
+
+      .mdc-checkbox__native-control[disabled]:checked ~ .mdc-checkbox__background, .mdc-checkbox .mdc-checkbox__native-control[disabled]:indeterminate ~ .mdc-checkbox__background, .mdc-checkbox .mdc-checkbox__native-control[data-indeterminate=true][disabled] ~ .mdc-checkbox__background {
+        border-color: var(--red-color) !important;
+        background-color: var(--red-color) !important;
+      }
+    }
+  }
+
+  &.mdc-checkbox--disabled {
+    label {
+      color: var(--text-color);
     }
   }
 }
