23 create table for user mode (#24)
* added table component. Display dates from db by month.

* rewrite table with Angular Material

* transfer pipes for private to privateSharedModule

* edited logic pipes. Created general function calculateTimeDifference

* edited pipes for displayed status for result cell and calculate total and result time. Added displayed worked at lunchtime in the table

* edited checkbox  - work from home.
Implemented table update when adding time.

* added review changes

* rename interface and fix logic for checkbox

* table display logic is separated, use materials for checkbox, icons and tooltips. Generate icons set file

* moved icon registry to app component

* edited styles for table component

* added checkbox component to login page, edited styles

* added min height for tables wrapper

--- a/src/app/private/components/time/time.component.html
+++ b/src/app/private/components/time/time.component.html
@@ -54,3 +54,8 @@
     </app-button>
   </div>
 </div>
+<mat-checkbox class="checkbox"
+              [disabled]="!!(currentTime.leaveTime)"
+              [(ngModel)]="currentTime.workFromHome">
+  I work from home
+</mat-checkbox>
