--- a/src/app/private/pages/home/home.component.html
+++ b/src/app/private/pages/home/home.component.html
@@ -3,5 +3,11 @@
     <span>Attendance Tracker</span>
     <span class="title-red">.</span>
   </div>
-  <app-time></app-time>
+  <app-time (attendanceChanged)="getAttendance()"></app-time>
+  <div class="tables">
+    <ng-container *ngFor="let monthGroup of groupedAttendance">
+      <app-table [monthRecord]="monthGroup.items"></app-table>
+    </ng-container>
+    <app-loader [showLoader]="showLoader"></app-loader>
+  </div>
 </div>
