--- a/src/app/private/pages/home/home.component.scss
+++ b/src/app/private/pages/home/home.component.scss
@@ -1,7 +1,13 @@
 @import 'src/styles/shared/functions';
 
+.tables {
+  position: relative;
+  min-height: em(400);
+}
+
 .container {
   padding-top: em(80);
+  padding-bottom: em(80);
   max-width: em(1280);
   margin: 0 auto;
 }
